// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ layout / Container ] #Container when 'Container' Centered is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="container is-playground is-centered"
  >
    Farthings pulled strain? Half they'll greater land sordid Elessar
  </div>
</DocumentFragment>
`;

exports[`[ layout / Container ] #Container when 'Container' Default is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="container is-playground"
  >
    Farthings pulled strain? Half they'll greater land sordid Elessar
  </div>
</DocumentFragment>
`;
